# lib_bot_ws

./: .gitignore  .gitmodules  NAVIGATE_TO_POSE_SETUP.md  QUICK_START_RFID_TEST.md  RFID_IMPLEMENTATION_SUMMARY.md  RFID_MODULE_TEST_REPORT.md  SIMULATION_SETUP.md  UI_IMPLEMENTATION_STATUS.md  VERIFY_FIX.md  clean.sh  final_rfid_integration_test.py  navigate_to_pose_demo.py  quick_rfid_validation.py  rfid_simulation_demo.sh  simple_test.py  test_findbook_with_action.py  test_goal.yaml  test_navigate_complete.py  test_navigate_to_pose.py  test_navigation.py  test_navigation_integration.py  test_rfid_integration.py  test_rfid_ros2_integration.py
_bmad/bmm/: config.yaml  project-context.md  rfid_implementation_completion_report.md  rfid_simulation_integration_summary.md
action_cancel_example/: README.md
action_cancel_example/install/: local_setup.sh  setup.sh
action_cancel_example/log/: latest_build
action_cancel_example/src/test_action_cancel/: setup.cfg  setup.py
action_cancel_example/src/test_action_cancel/test_action_cancel/: control_publisher.py  test_cancel_server.py
action_cancel_example/src/test_action_interfaces/: CMakeLists.txt
docs/: READY_TO_START.md  design_brainstorm_detailed.md  design_brainstorm_highlevel.md  design_ui.md  epic2_development_plan.md  features_summary.md  groot_usage_guide.md  phase1_implementation_plan.md  test_cases.md
src/: sprint-status.yaml  test_l2_integration.py
src/aws-robomaker-bookstore-world/models/SquareShelf/: model.sdf
src/aws-robomaker-bookstore-world/models/rfid_tag/: model.sdf
src/aws-robomaker-bookstore-world/worlds/: bookstore_with_rfid.world
src/libbot_behavior_trees/: CMakeLists.txt  package.xml
src/libbot_behavior_trees/behaviors/: findbook_bt.xml  main_bt.xml  recovery_bt.xml
src/libbot_behavior_trees/config/: bt_config.yaml
src/libbot_behavior_trees/include/libbot_behavior_trees/: bt_manager_node.hpp  bt_nodes.hpp
src/libbot_behavior_trees/src/: bt_manager_node.cpp  bt_nodes.cpp  main.cpp
src/libbot_logging/: README.md  debug_test.py  demo_with_persistence.py  example_usage.py  fixed_demo.py  fixed_demo_logs.db  logging_demo_node.py  package.xml  setup.cfg  setup.py  simple_test.py  test_logging_basic.py  test_simple.db
src/libbot_logging/config/: rotation_config.yaml
src/libbot_logging/libbot_logging/: __init__.py  compression_utils.py  config_loader.py  hybrid_logger.py  log_buffer.py  log_rotator.py  query_interface.py  ros2_logger.py  sqlite_logger.py  storage_monitor.py
src/libbot_logging/libbot_logging/config/: logging_config.yaml
src/libbot_logging/logs/: library.db
src/libbot_monitoring/: README.md  package.xml  setup.cfg  setup.py
src/libbot_monitoring/libbot_monitoring/: __init__.py  health_monitor.py  health_reporter.py
src/libbot_monitoring/libbot_monitoring/monitors/: __init__.py  (+4 more)
src/libbot_msgs/: CMakeLists.txt  package.xml
src/libbot_msgs/action/: FindBook.action  PerformInventory.action
src/libbot_msgs/msg/: HealthMetric.msg  RFIDScan.msg  SystemHealth.msg
src/libbot_msgs/srv/: CheckRobotStatus.srv  GetBookInfo.srv  GetHealthReport.srv  UpdateBookLocation.srv
src/libbot_simulation/: CMakeLists.txt  README.md  RFID_MODULE_USAGE.md  package.xml  setup.py
src/libbot_simulation/config/: library_nav2_params.yaml  rfid_config.yaml  rfid_rviz.rviz  rfid_simple_config.yaml  turtlebot3_config.yaml
src/libbot_simulation/launch/: library_gazebo.launch.py  library_gazebo_rfid.launch.py  library_headless.launch.py  library_manipulation_base.launch.py  library_manipulation_bookstore.launch.py  library_nav2_simple.launch.py  library_nav2_simulation.launch.py  library_nav2_use_sim_time.launch.py  library_navigation.launch.py  library_navigation_complete.launch.py  library_rfid_demo.launch.py  library_rfid_demo_fixed.launch.py  library_simulation.launch.py  library_tb3_simulation.launch.py  library_with_turtlebot3.launch.py  rfid_simulation.launch.py  simple_rfid_demo.launch.py
src/libbot_simulation/libbot_simulation/: amcl_pose_converter.py  rfid_noise_model.py  rfid_sensor_node.py  rfid_visualizer.py  robot_pose_publisher.py  robust_pose_publisher.py
src/libbot_simulation/models/rfid_tag/: model.config
src/libbot_simulation/rviz/: rfid_demo.rviz  rfid_nav2.rviz
src/libbot_simulation/test/: test_rfid_simulation.py
src/libbot_simulation/worlds/: bookstore.world  bookstore_with_rfid.world
src/libbot_tasks/: README.md  package.xml  setup.cfg  setup.py
src/libbot_tasks/libbot_tasks/: error_detector.py  l1_recovery_node.py  l2_recovery_behaviors.py  recovery_behaviors.py
src/libbot_tasks/test/: bt_integration_demo.py  test_bt_integration.py  test_bt_structure.py  test_error_detection.py  test_error_detection_demo.py  test_error_detection_integration.py  test_l1_recovery.py  test_l1_recovery_integration.py  test_l2_recovery.py
src/libbot_ui/: CMakeLists.txt  package.xml  setup.cfg  setup.py  test_findbook_integration.py
src/libbot_ui/config/: book_database.yaml
src/libbot_ui/launch/: ui_findbook_demo.launch.py
src/libbot_ui/libbot_ui/: __init__.py  error_dialog.py  find_book_dialog.py  l1_recovery_integration.py  l2_recovery_integration.py  left_panel.py  log_filter.py  main_window.py  progress_widget.py  right_panel.py  ros2_manager.py  settings_dialog.py  status_panel.py
src/stories/: 1-1-ui-main-window.md  1-2-ros2-manager.md  1-3-find-book-dialog.md  1-4-status-display.md  1-5-log-panel.md  2-1-l1-recovery.md  2-2-l2-recovery-IMPLEMENTATION_SUMMARY.md  2-2-l2-recovery.md  2-3-error-detection.md  2-4-bt-integration.md  3-1-hybrid-logging.md  3-2-health-monitoring.md  3-3-log-panel-ui.md  3-4-log-rotation.md  4-1-config-structure.md  5-1-topic-interfaces.md  6-1-rfid-noise-model-IMPLEMENTATION.md  6-1-rfid-noise-model.md  index.md
tests/: manual_ui_test.py  test_action_server.py
tests/integration/: __init__.py  test_find_book_action.py  test_perform_inventory_action.py  test_ui_integration.py
tmp_docs/: README.md  current_status.md  rfid_integration_summary.md  rfid_quick_reference.md  rfid_simulation_integration_guide.md  rfid_test_results.md
(+58 files in other folders)
